# dell_ft_ie_interface

./: Makefile.am  README  autogen.sh  configure.ac
dell_dup/: __init__.py  buildrpm_dup.py  dup.py  extract_dup.py  svm.py
dell_ft_ie_interface/: __init__.py  buildrpm_plugin.py  create_payload.py  dup.py  ie_interface.py  svm.py
pkg/: dell-dup.conf  dell-dup.spec.in  dell-inventory-collector.spec.in  dell_ft_ie_interface.conf  dell_ft_ie_interface.spec.in  dup.spec.in  update-payload.spec.in
test/: testPackage.py  testSvm.py
test/ie_test/moduleA/: LSIPIE.sh  PIEConfig.xml  inventory.xml  ttyhist.sh
